--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
     "dev": "next"
   },
   "dependencies": {
+    "autoprefixer": "^7.1.1",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-wrap-in-js": "^1.1.1",
+    "glob": "^7.1.2",
     "next": "^2.4.3",
     "next.js": "^1.0.3",
+    "node-sass": "^4.5.3",
+    "normalize.css": "^7.0.0",
+    "postcss-easy-import": "^2.1.0",
+    "postcss-loader": "^2.0.6",
+    "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
-    "reactstrap": "^4.6.2"
+    "reactstrap": "^4.6.2",
+    "sass-loader": "^6.0.6"
+  },
+  "devDependencies": {
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "webpack": "^2.6.1"
   }
 }
