--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
+    "babel-plugin-transform-define": "^1.3.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "webpack": "^2.6.1"
