--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "glob": "^7.1.2",
+    "immutable": "^3.8.1",
     "next": "^2.4.4",
+    "next-redux-wrapper": "^1.1.2",
     "next.js": "^1.0.3",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
@@ -22,7 +24,12 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "reactstrap": "^4.6.2",
+    "redux": "^3.7.0",
+    "redux-form": "^6.8.0",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^0.15.3",
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
