--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "webpack": "^2.6.1"
+  },
+  "engines": {
+    "node": "6.9.2"
   }
 }
