--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "autoprefixer": "^7.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-wrap-in-js": "^1.1.1",
     "babel-plugin-transform-define": "^1.3.0",
+    "babel-plugin-wrap-in-js": "^1.1.1",
     "glob": "^7.1.2",
     "immutable": "^3.8.1",
     "next": "^3.0.0-beta16",
@@ -21,18 +21,21 @@
     "normalize.css": "^7.0.0",
     "postcss-easy-import": "^2.1.0",
     "postcss-loader": "^2.0.6",
+    "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.5",
     "reactstrap": "^4.6.2",
     "redux": "^3.7.0",
     "redux-form": "^6.8.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.3",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "node-sass": "^4.5.3",
