--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "application-name",
   "version": "0.0.1",
   "scripts": {
-    "dev": "next",
+    "dev": "node server",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "start-noport": "next start",
+    "start": "NODE_ENV=production node server.js",
+    "start-with-port": "PORT=3000 NODE_ENV=production node server.js",
     "heroku-postbuild": "next build"
   },
   "dependencies": {
     "autoprefixer": "^7.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
+    "express": "^4.15.3",
     "glob": "^7.1.2",
+    "http-proxy": "^1.16.2",
     "immutable": "^3.8.1",
     "next": "^3.0.0-beta16",
     "next-redux-wrapper": "^1.1.2",
