--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-form": "^6.8.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.3",
+    "reselect": "^3.0.1",
     "sass-loader": "^6.0.6",
     "whatwg-fetch": "^2.0.3"
   },
