--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-wrap-in-js": "^1.1.1",
     "express": "^4.15.3",
     "glob": "^7.1.2",
+    "google-map-react": "^0.24.0",
     "http-proxy": "^1.16.2",
     "immutable": "^3.8.1",
     "next": "^3.0.0-beta16",
