--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-ga": "^2.2.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.5",
     "reactstrap": "^4.6.2",
